--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trendyol/safe-redirect",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Resolves open-redirection issue",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
@@ -25,5 +25,8 @@
     "sinon": "^9.0.2",
     "ts-jest": "^26.1.1",
     "typescript": "^3.9.5"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
