--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@trendyol/safe-redirect",
-  "version": "1.0.2",
+  "name": "@trendyol-js/safe-redirect",
+  "version": "1.0.3",
   "description": "Resolves open-redirection issue",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
